--- a/weatherornot/Gemfile
+++ b/weatherornot/Gemfile
@@ -1,5 +1,7 @@
 source 'https://rubygems.org'
 
+gem 'forecast_io'
+gem 'geocoder'
 gem 'httparty'
 gem 'bootstrap-sass', '~> 3.2.0.2'
 gem 'pry-rails'
